<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Рота зв’язку</string>
    <string name="login_name">Позивний</string>
    <string name="login_password">Пароль</string>
    <string name="login_button">Увійти</string>
    <string name="auth_error">Доступ не надано</string>
    <string name="repassord_error">Паролі не співпадають</string>
    <string name="equipage_error">Номер екіпажу повинен бути більшим від 0</string>
    <string name="id_error">Ідентифікатор повинен бути більшим від 0</string>
    <string name="needed_error">Потрібно заповнити всі обов’язкові поля</string>
    <string name="exists_error">Такий позивний уже існує</string>
    <string name="id_exists_error">Такий ідентифікатор вже існує</string>
    <string name="auth_ok">Бажаю здоров’я, товаришу</string>
    <string name="people">Особовий склад</string>
    <string name="person">Особова справа</string>
    <string name="rank">Військове звання</string>
    <string name="classified">Форма допуску</string>
    <string name="drawer_open">open</string>
    <string name="add">Додати</string>
    <string name="cancel">Відмінити</string>
    <string name="drawer_close">close</string>
    <string name="action_search">Пошук…</string>
    <string name="action_add">Додати</string>
    <string name="add_person">Додавання особової справи</string>
    <string name="add_weapon">Додавання одиниці зброї</string>
    <string name="add_transport">Додавання траспортного засобу</string>
    <string name="add_equipage">Додавання екіпажу</string>
    <string name="star_hint">* Обов’язкові до заповнення поля</string>
    <string name="name">Ім’я</string>
    <string name="surname">Прізвище</string>
    <string name="fathername">По батькові</string>
    <string name="equipage_number">Номер екіпажу</string>
    <string name="repeat_password">Повторіть пароль</string>
    <string name="CIVILIAN">Цивільний</string>
    <string name="SOLDIER">Рядовий</string>
    <string name="SENIOR_SOLDIER">Старший солдат</string>
    <string name="JUNIOR_SERGEANT">Молодший сержант</string>
    <string name="SERGEANT">Сержант</string>
    <string name="SENIOR_SERGEANT">Старший сержант</string>
    <string name="STARSHYNA">Старшина</string>
    <string name="PRAPORSHCHYK">Прапорщик</string>
    <string name="SENIOR_PRAPORSHCHYK">Старший прапорщик</string>
    <string name="JUNIOR_LIEUTENANT">Молодший лейтенант</string>
    <string name="LIEUTENANT">Лейтенант</string>
    <string name="SENIOR_LIEUTENANT">Старший лейтенант</string>
    <string name="CAPTAIN">Капітан</string>
    <string name="MAJOR">Майор</string>
    <string name="PIDPOLKOVNYK">Підполковник</string>
    <string name="POLKOVNYK">Полковник</string>
    <string name="GENERAL_MAJOR">Генерал-майор</string>
    <string name="GENERAL_LIEUTENANT">Генерал-лейтенант</string>
    <string name="GENERAL_POLKOVNYK">Генерал-полковник</string>
    <string name="GENERAL_OF_ARMY">Генерал Армії</string>
    <string name="UNCLASSIFIED">Без допуску</string>
    <string name="CONFIDENTIAL">Форма 3</string>
    <string name="SECRET">Форма 2</string>
    <string name="TOP_SECRET">Форма 1</string>
    <string name="UNCLASSIFIED_PACKAGE">Відкритий</string>
    <string name="CONFIDENTIAL_PACKAGE">Таємний</string>
    <string name="SECRET_PACKAGE">Цілком таємний</string>
    <string name="TOP_SECRET_PACKAGE">Особливої важливості</string>
    <string name="profile">Профіль</string>
    <string name="logout">Вийти</string>
    <string name="weapon_of_person">Приписана зброя:</string>
    <string name="weapon_not_found">Відсутня</string>
    <string name="transport">Транспорт</string>
    <string name="contacts">Контакти</string>
    <string name="weapon">Зброя</string>
    <string name="equipages">Екіпажі</string>
    <string name="equipage_id">Екіпаж №</string>
    <string name="equipage">Екіпаж</string>
    <string name="no_equipage">Не приписаний до екіпажу</string>
    <string name="search_query"> / фільтр: </string>
    <string name="number_sym">№</string>
    <string name="owner">Власник:</string>
    <string name="no_permission">Ви не можете оперувати інформацією військових вищого звання.</string>
    <string name="login_name_owner">Позивний власника</string>
    <string name="model">Модель</string>
    <string name="id">Ідентифікатор</string>
    <string name="owner_not_found">Введеного позивного немає в базі</string>
    <string name="equipage_not_found">Введеного екіпажу немає в базі</string>
    <string name="to_archive">Архівувати</string>
    <string name="edit">Редагувати</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="confirmation">Підтвердження</string>
    <string name="confirmation_message">Ви дійсно бажаєте архівувати цей запис?</string>
    <string name="confirmation_end">Цей зв’язок завершено?</string>
    <string name="one_weapon">Екземпляр зброї</string>
    <string name="one_transport">Одиниця транспорту</string>
    <string name="weapon_view_id">Ідентифікатор:</string>
    <string name="weapon_view_model">Модель:</string>
    <string name="equipage_commander">Командир:</string>
    <string name="commander_name">Позивний командира</string>
    <string name="date_error">Введення майбутньої дати не допустиме.</string>
    <string name="date_error_vv">Введення минулого часу не допустиме.</string>
    <string name="equipage_car">В складі екіпажу №</string>
    <string name="last_techwok">Останній техогляд:</string>
    <string name="classified_level">Допуск:</string>
    <string name="add_contact">Наказ на контакт</string>
    <string name="time_of_contact">Час встановлення зв’язку</string>
    <string name="contact_param">Параметри контакту</string>
    <string name="contact_type">Засіб зв’язку</string>
    <string name="contact_wired">Проводовий зв’язок</string>
    <string name="contact_satellite">Супутниковий зв’язок</string>
    <string name="contact_radiorelated">Радіо-рел. зв’язок</string>
    <string name="contact_radio">Радіозв’язок</string>
    <string name="contact_courier">ФПЗ</string>
    <string name="wired_hint">Номер вузла</string>
    <string name="satellite_hint">Супутник</string>
    <string name="radiorelated_hint">Азимут</string>
    <string name="radio_hint">Частота</string>
    <string name="courier_hint">Отримувач</string>
    <string name="packs_of_contact">Пакети до перевезення:</string>
    <string name="start_time">Час початку:</string>
    <string name="finish_time">Час закінчення:</string>
    <string name="add_package">Пакет у перевезенні №</string>
    <string name="classified_error">Немає необхідного допуску.</string>
    <string name="end_contact">Кінець зв’язку</string>
    <string name="end_contact_error">Поточний час раніший за час встановлення зв’язку.</string>
    <string name="not_from_equipage">Ви не приписані до цього екіпажу.</string>
</resources>
