<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/weaponDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/weaponParentLayout"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/LMilitary">
        
    </LinearLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:id="@+id/weaponMenu"
                android:layout_alignParentLeft="true"
                android:background="@color/DMilitary">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/menuParent"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/profile" android:id="@+id/homeButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_person"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/people" android:id="@+id/peopleButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_group"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/equipages" android:id="@+id/equipagesButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_equipage"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/contacts" android:id="@+id/contactsButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_contact"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/transport" android:id="@+id/transportButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_transport"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
            <Button
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/weapon" android:id="@+id/weaponButton" android:layout_margin="5dp"
                    android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:textColor="@color/LMilitary" android:background="@drawable/button_drawer"
                    android:drawableLeft="@drawable/ic_action_weapon"
                    android:clickable="true" android:enabled="true" android:gravity="center_vertical|left"
                    android:minWidth="230dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>
