<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (c) 2014 Taras D. Rogov
    *
    * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
    * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
    * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
    * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
    *
    * The above copyright notice and this permission notice shall be included in all copies or substantial portions
    * of the Software.
    *
    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
    * THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
    * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
    * CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
    * IN THE SOFTWARE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/DMilitary" android:id="@+id/introParentLayout" android:gravity="center">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/armyLogoView" android:src="@drawable/army_logo" android:layout_margin="25dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginView" android:hint="@string/login_name" android:textColor="@color/LMilitary"
            android:textColorHint="@color/MMilitary" android:singleLine="true" android:minWidth="200dp"
            android:capitalize="characters" android:editable="true" android:enabled="true"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/passwordView"
              android:hint="@string/login_password" android:textColor="@color/LMilitary"
              android:textColorHint="@color/MMilitary" android:singleLine="true" android:password="true"
              android:minWidth="200dp" android:editable="true" android:enabled="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/loginButton" android:layout_margin="25dp" android:textColor="@color/DMilitary"
            android:background="@drawable/button" android:clickable="true" android:enabled="true"/>
</LinearLayout>

